cleaned menu and fixed pushback when on the floor

--- a/Adrenarush.csproj
+++ b/Adrenarush.csproj
@@ -29,4 +29,7 @@
   <ItemGroup>
     <TrimmerRootDescriptor Include="Linker.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Tomlyn" Version="*-*" />
+  </ItemGroup>
 </Project>
