--- a/Adrenarush.csproj
+++ b/Adrenarush.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Godot.NET.Sdk/4.1.0-dev.3">
+<Project Sdk="Godot.NET.Sdk/4.0.3">
   <PropertyGroup Condition="$([MSBuild]::VersionGreaterThanOrEquals('$(NETCoreSdkVersion)', '6.0'))">
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
